<resources>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">Nasz Samochód</string>
    <string name="logIn">Zaloguj</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Hasło</string>
    <string name="log">Logowanie</string>
    <string name="take_photo_string">Zrób zdjęcie</string>
    <string name="register">Nie jesteś zarejestrowany?</string>
    <string name="link"><a href="http://naszsamochod.com.pl/PRI-NaszSamochod/Account/Register">Zarejestruj</a></string>
    <string name="message">Wpisz wiadomosc</string>
    <string name="error">Błąd logowania</string>
    <string name="send">Wyślij</string>
    <string name="send_photo">Wyślij zdjęcie</string>
    <string name="statistics_info">STATYSTYKI</string>
    <string name="kilometersDrivenString">Przejechane kilometry</string>
    <string name="fuelUsedString">Zużyte paliwo</string>
    <string name="maxVelocityString">Maksymalna prędkość</string>
    <string name="send_photo_info">Czy chcesz wysłać to zdjęcie?</string>
    <string name="send_title">Wysyłanie zdjęcia</string>
    <string name="ok">Tak</string>
    <string name="cancel">Nie</string>
</resources>
