<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/porsche"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.dominika.naszsamochod.LogIn">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/logIn_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            app:srcCompat="@drawable/profile_icon" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/email_et"
            android:layout_below="@+id/email_et"
            android:layout_marginTop="29dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/logIn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/register_info"
            android:layout_marginTop="54dp"
            android:text="@string/log"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <Button
            android:id="@+id/logIn_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:background="@drawable/button_shape"
            android:text="@string/logIn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logIn_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:text="@string/link" />

        <TextView
            android:id="@+id/register_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logIn_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/register"
            android:textColor="@color/white" />

    </RelativeLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
